@@ -56,6 +56,7 @@ Improved ZX Vision:
 Improved Debug CPU:
 - Show port number when opcode IN. Show keyboard row when port is XXFEH on Spectrum
 - Show view number inside the window and not in the window title
+- Added pass count to breakpoints (a breakpoint that is triggered when the condition is hit a certain times)
 - Added option to enable/disable all breakpoints
 - Fixed moving cursor up when address near 0
 
